--- a/manuscript_Rmd/Acadian_seaplants_v1.tex
+++ b/manuscript_Rmd/Acadian_seaplants_v1.tex
@@ -50,9 +50,8 @@
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
 
-\title{\textbf{The effect of \emph{Ascophyllum nodosum} extracts on tomato and
-pepper plant productivity and root and soil microbiome and fungal
-communities.}  }
+\title{\textbf{The effect of \emph{Ascophyllum nodosum} extracts on plant
+productivity and fungal and bacterial communities.}  }
 
 
 
@@ -107,9 +106,8 @@ Recherche en Biologie Végétale, Université de Montréal, 4101 Sherbrooke
 Est, Montreal, H1X 2B2, Quebec, Canada. \textsuperscript{2}Quebec Centre
 for Biodiversity Science, Montreal, Quebec, Canada)},
              pdfkeywords = {Stella Marris, 16S, ITS, microbial diversity, Illumina MiSeq},  
-            pdftitle={\textbf{The effect of \emph{Ascophyllum nodosum} extracts on tomato and
-pepper plant productivity and root and soil microbiome and fungal
-communities.}},
+            pdftitle={\textbf{The effect of \emph{Ascophyllum nodosum} extracts on plant
+productivity and fungal and bacterial communities.}},
             colorlinks=true,
             citecolor=blue,
             urlcolor=blue,
@@ -189,11 +187,21 @@ for Biodiversity Science, Montreal, Quebec, Canada}
 
 \section{INTRODUCTION}\label{introduction}
 
+Liquid extracts of marine macroalga are used as biostimulants in
+agriculture. These extracts contain phytohormones that can influence
+physiological processes even at very low concentrations (Craigie 2011).
+Stella Maris® is derived from fresh \emph{Ascophyllum nodosum} harvested
+from the nutrient-laden waters of the North Atlantic off the Eastern
+Coast of Canada.\\
+\hspace*{0.333em}\\
 The aim of this project was to develop a better understanding of the
-effects of \emph{Ascophyllum nodosum} extracts on plant growth. In
-addition, we tested how the bacterial and fungal communities responded
-to the additin of \emph{A. nodosum} extracts. ~\\
-\hspace*{0.333em}
+effects of \emph{A. nodosum} extracts on plant growth. We tested the
+effect of these extract on two commonly used plants (Tomato -
+\emph{Solanum lycopersicum} and Pepper - \emph{Capsicum annuum}) using
+different measures of productivity. In addition, we tested how the
+bacterial and fungal communities responded to the addition of \emph{A.
+nodosum} extracts.\\
+\hspace*{0.333em} ~
 
 \section{MATERIAL AND METHOD}\label{material-and-method}
 
@@ -201,10 +209,10 @@ to the additin of \emph{A. nodosum} extracts. ~\\
 Two greenhouse experiment were set up in large trays (60x30x18 cm) in
 November (tomato {[}cv: Totem Hybrid\#A371, William Dam Seeds Ltd{]})
 and December (Pepper {[}cv: Ace Hybrid\#318, William Dam Seeds Ltd{]})
-2015. Soil was collected form agricultural field under organic regime at
-the IRDA research station in St-Bruno (Qc, Canada) on October 7th 2015
-(loam sandy soil, 15 cm top layer collected). Soil characteristics (four
-samples) were measured by AgriDirect (Longueil, Qc, Canada) to
+2015. Soil was collected form an agricultural field under organic regime
+at the IRDA research station in St-Bruno (Qc, Canada) on October 7th
+2015 (loam sandy soil, 15 cm top layer collected). Soil characteristics
+(four samples) were measured by AgriDirect (Longueuil, Qc, Canada) to
 determine\ldots{}\\
 \hspace*{0.333em}\\
 For each species tested (Tomato - \emph{Solanum lycopersicum} and Pepper
@@ -212,10 +220,10 @@ For each species tested (Tomato - \emph{Solanum lycopersicum} and Pepper
 was used with four trays set up per block (eight blocks). Half of the
 trays were fertilized (fertilization treatment) as described below. Half
 of the trays were also planted with four replicate plants each, while
-the other trays were left bare. This allowed to compare the fungal and
+the other trays were left bare. This allowed comparing the fungal and
 bacteria soil communities with respect to the fertilization and planting
 treatment. ~\\
-\includegraphics[width=5.20833in]{Figure1.png}\\
+\includegraphics[width=5.20833in]{../figures/Figure1.png}\\
 \textbf{Figure 1: experimental design}\\
 \hspace*{0.333em}\\
 Tomato plants were fertilized using multipurpose organic fertilizer
@@ -223,8 +231,8 @@ Tomato plants were fertilized using multipurpose organic fertilizer
 Acti-sol (Notre-Dame-du-Bon-Conseil, Qc, Canada) in addition to Stella
 Maris® (3.5 ml per 1L, each tray received 250 ml, repeated every 2
 weeks) for the duration of the experiment. Stella Maris® is a registered
-trade mark from Acadian Seaplants Ltd. (Darmouth, NS, Canada). It is
-primarly composed of \emph{Ascophyllum nodosum} seaweed and is
+trademark from Acadian Seaplants Ltd. (Darmouth, NS, Canada). It is
+primarily composed of \emph{Ascophyllum nodosum} seaweed and is
 advertized as a natural activator of the crops' own growth and defense
 mechanisms to improve root growth and resist temperature, drought, and
 salinity stress in order to maximize yield and crop qualities (ref.).
@@ -245,27 +253,28 @@ shoots fresh weight, roots fresh weight) on three plants chosen randomly
 per tray (for each treatment {[}fertilization/control{]}, species
 {[}tomato/pepper{]} and block {[}eight blocks{]}) for a total of 96
 samples. In addition, both shoots and roots were dried in a 70 degrees
-drying oven, and dry weights were measured after 48hrs. Together, these
-traits are known to represent well the plant overall productivity
-(ref.).\\
+drying oven, anddry weights were measured after 48 hours. Together,
+these traits are expected to represent well the plant overall
+productivity (ref.).\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
 \emph{Sample preparation, DNA extraction and High throughput
 sequencing}\\
-We collected the microbial and fungal communities from both soil and
-root samples. Amplicon sequencing targeting 16S rRNA gene (bacteria) and
-ITS (fungi) was performed on both root and soil samples. DNA was
-extracted from X g of plant root and Y g of soil samples using the Y DNA
-Isolation Kit.\\
+We sampled both the microbial and fungal communities from soil and root
+samples. Soil DNA was extracted using XXX DNA isolation kit with Yg of
+soil. Roots were first washed with sterile water and DNA was extracted
+using XXX DNA isolation kit with Yg of root samples. Amplicon sequencing
+targeting 16S rRNA gene (bacteria) and ITS (fungi) was performed on both
+root and soil samples.\\
 \hspace*{0.333em}\\
 In order to target fungi, we used fungal primers ITS3\_KYO2
-(5'-ACACTGACGACATGGTTCTACAGATGAAGAACGYAGYRAA-3') and ITS4\_KYO3
-(5'-TACGGTAGCAGAGACTTGGTCTCTBTTVCCKCTTCACTCG-3') to produce a final
+(5'-ACACTGACGACATGGTTCT ACAGATGAAGAACGYAGYRAA-3') and ITS4\_KYO3
+(5'-TACGGTAGCAGAGACTT GGTCTCTBTTVCCKCTTCACTCG-3') to produce a final
 amplicon size of 430bp (Toju \emph{et al.} 2012).\\
 \hspace*{0.333em}\\
 Bacterial primers 341F (5'-CCTACGGGNGGCWGCAG-3') and 805R
-(5'-GACTACCAGGGTATCTAATC-3') producing a final amplicon size of
-\textasciitilde{}464b and targetting specifically the bacterial V3-V4
+(5'-GACTACCAGGGTATC TAATC-3') producing a final amplicon size of
+\textasciitilde{}464b and targeting specifically the bacterial V3-V4
 region of the 16S ribosomal gene were chosen given that they has been
 used extensively in high-throughput sequencing studies in a range of
 environments (Hugerth \emph{et al.} 2014). This primer pair was shown to
@@ -276,12 +285,14 @@ DNA samples were then barcoded, pooled and sequenced (2X300bp,
 paired-end) using an Illumina MiSeq (San Diego, CA, USA) sequencer at
 the Genome Quebec Innovation Centre (Montreal, Canada). Sequences were
 demultiplexed by the sequencing facility (Genome Quebec Innovation
-Centre) and futher processed as described below. ~\\
+Centre) and further processed as described below.\\
 \hspace*{0.333em}\\
-\emph{Bioinformatics} All bioinformatics, statistical, and graphic
-analyses further described were performed in R 3.4.4 (R Core Team 2018)
-and detailed scripts are available here
-(\url{https://github.com/seb951/Acadian_Seaplants}). ~\\
+\hspace*{0.333em}\\
+\emph{Bioinformatics}\\
+All bioinformatics, statistical, and graphic analyses further described
+were performed in R 3.4.4 (R Core Team 2018) and detailed scripts are
+available here (\url{https://github.com/seb951/Acadian_Seaplants}).\\
+\hspace*{0.333em}\\
 We used the R package dada2 (Callahan \emph{et al.} 2015) to infer
 \emph{Amplicon Sequence Variants (ASVs)}. Dada2 offers accurate sample
 inference from amplicon data with single-nucleotide resolution in an
@@ -292,8 +303,8 @@ open source (R) environments. Unlike the Operational Taxonomic Unit
 abundance counts to be compared among studies (Callahan \emph{et al.}
 2015).\\
 \hspace*{0.333em}\\
-First, sequence were trimmed following strict quality thresholds (see
-parameter details in the accompanying R pipeline). Following this, we
+First, sequences were trimmed following strict quality thresholds (see
+parameter details in the accompanying R scripts). Following this, we
 applied the error model algorithm of dada2 which incorporates quality
 information after filtering, unlike other OTU based methods. Then
 dereplication, sample inference, merging of paired end reads and removal
@@ -304,16 +315,16 @@ from Wang \emph{et al.} (2007). Depending on support (minimum bootstrap
 support of 80), we assigned taxonomy from Kingdom to species. We used
 the silva database formatted for dada2 to infer bacterial taxa (Callahan
 2018). We used the UNITE (2017) fasta release (including singletons) to
-infer fungal taxa after formating it to the dada2 format using a custom
-R script. The dada2 pipeline was run on a multithreated (48 CPUs)
+infer fungal taxa after formatting it to the dada2 format using a custom
+R script. The dada2 pipeline was run on a multithreaded (48 CPUs)
 computer infrastructure provided by Westgrid
 (\url{https://www.westgrid.ca/support/systems/cedar}) and Compute Canada
-(www.computecanada.ca). Note that the pipeline was run separetely for
-fungal root, fungal soil, bacteria soil and bacteria root samples given
+(www.computecanada.ca). Note that the pipeline was run separately for
+fungal-root, fungal-soil, bacteria-soil and bacteria-root samples given
 the markedly different type of amplicons, taxa and error models of each
 dataset. ~\\
 \hspace*{0.333em}\\
-\emph{Statistical analyses - Plant productivity}\\
+\emph{Statistical analyses - plant productivity}\\
 We tested for the effect of species (tomato vs pepper), fertilization
 and their interaction on six plant productivity measures (fruit number,
 average fruit weight, shoots fresh weight, roots fresh weight, shoots
@@ -327,179 +338,213 @@ statistical framework.\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
 \emph{Statistical analyses - microbial and fungal diversity}\\
-We analysed separetely fungal root, fungal soil, bacterial root and
-bacterial soil ASV diversity. For each of these four datasets, we
-removed samples that showed poor sequencing output and containted few
+We analysed separately fungal-root, fungal-soil, bacterial-root and
+bacterial-soil ASV diversity. For each of these four datasets, we
+removed samples that showed poor sequencing output and contained few
 ASVs. In order to do this, we summed the abundance of all ASVs for each
 sample (\(\sum_{i=1}^n ASV\)) and eliminated samples that had fewer that
-the mean sum (\(\overline{\sum_{i=1}^n ASV}\)) - four standard
-deviations. In addition, we removed ASVs from our dataset that were
-present in fewer than 5\% of the samples (less than 10 individuals in
-the soil samples, and less than 5 in the root samples). This was done to
-remove very rare ASVs which were unique to a block or replicate, but not
-to found in the majority of a treatment.\\
+the mean sum (\(\overline{\sum_{i=1}^n ASV}\)) - 4\(\sigma\) (four
+standard deviations). In addition, we removed ASVs from our dataset that
+were present in fewer than 5\% of the samples (less than 10 individuals
+in the soil samples, and less than 5 in the root samples). This was done
+to remove very rare ASVs which were unique to a block or replicate, but
+not found in the majority of a treatment.\\
 \hspace*{0.333em}\\
 We then conducted community-based analyses looking at the effect of the
-fertilization on the abundance ASV taxa in the tomato and pepper
-experiments. To reduce the complexity of the datasets, relative
+fertilization treatment on the abundance ASV taxa in the tomato and
+pepper experiments. To reduce the complexity of the datasets, relative
 abundance of all taxa were calculated per family using dplyr (Wickham
 \emph{et al.} 2015). Barplots were drawn using ggplot2 (Hadley 2016) to
 vizualize the communities. ASV (\(a\))-diversity was calculated for each
 sample using the inverse Simpson diversity index in the R package VEGAN
-(Oksanen \emph{et al.} 2013). The effect of treatment, species (and
-planting for soil communities) were assessed using a linear mixed-effect
-(LMM) model in the R package NLME (Pinheiro \emph{et al.} 2017), given
-the unbalanced, replicated block design. Alpha diversity was log
-transformed in order to help satisfy the assumption of normality of the
-residuals of the LMM.\\
+(Oksanen \emph{et al.} 2013). The effect of fertilization treatment,
+species (and planting for soil communities) were assessed using a linear
+mixed-effect (LMM) model in the R package NLME (Pinheiro \emph{et al.}
+2017), given the unbalanced, replicated block design. Alpha diversity
+was log transformed in order to help satisfy the assumption of normality
+of the residuals of the LMM statistical framework.\\
 \hspace*{0.333em}\\
 Using the community matrix data of ASVs abundance, we performed
 PERmutational Multivariate ANalysis Of VAriance tests (PERMANOVA;
 Anderson 2001) to identify relationships between the communities
 according to the experimental design. ASV abundance data was
-Hellinger-transformed and significance was asssessed using 10,000
+Hellinger-transformed and significance was assessed using 10,000
 permutations in VEGAN (Oksanen \emph{et al.} 2013). Blocks and
 replicates nested within blocks were factored as strata (blocks) in the
 model.\\
 \hspace*{0.333em}\\
-We also performed constrained ordinations (cca) using
+We also performed constrained ordinations (CCAs) using
 Hellinger-transformed ASV abundance data in VEGAN (Oksanen \emph{et al.}
 2013) to visually assess the grouping of samples, ASVs and their
-association with productivity variables. Data were seperated by species,
-root/soil and taxa (fungi/bacteria) givint a total of eight CCAs. Data
-were constrained based on four of the productivity measures (fruit
-number, average fruits weight, shoots fresh weight, roots fresh weight).
-We excluded the shoot \& root dry weights as constraints to simplify the
-model given that they were highly correlated with the fresh weigth
-already included as constraints (\(r^2\)=0.98 and 0.76 for shoot
-dry/freshweight and root dry/freshweights, respectively). We then
-identified the ten ASVs most closely associated with fruit number,
-shoots fresh weight and roots fresh weight from each constrained
-ordinations for a total of 40 fungal and 40 bacterial candidates ASVs.
-We then plotted a phylogenetic tree for bacteria and fungi using ape
-(Paradis \emph{et al.} 2004) and phangorn (Schliep 2010) to see if
-identify candidate ASVs found under different experimental conditions
-(soil/root,pepper/tomato).
-
-A partition of the variation was also performed to assess how much of
+association with productivity variables. Data were analysed separately
+for fungal-root, fungal-soil, bacterial-root and bacterial-soil, but
+also according to species (tomato/pepper), given had analyses of
+diversity showed that tomato and pepper were markedly different. This
+gave a total of eight CCAs. Data were constrained based on four of the
+productivity measures (fruit number, average fruits weight, shoots fresh
+weight, roots fresh weight). We excluded the shoot \& root dry weights
+as constraints to simplify the model, also given that they were highly
+correlated with the fresh weigth already included as constraints
+(\(r^2\)=0.98 and 0.76 for shoot dry/fresh weights and root dry/fresh
+weights, respectively). ~\\
+\hspace*{0.333em}\\
+We then identified the ten ASVs most positively associated with the
+productivity measures of fruit number, shoots fresh weight and roots
+fresh weight from each constrained ordinations for a total of 40 fungal
+and 40 bacterial candidates ASVs. We aligned sequences using the
+Bioconductor R package decipher (Wright 2016) and build pairwise
+distances matrices using a JC69 substitution models of DNA sequence
+evolution (equal base frequencies, Jukes \& Cantor 1969) in phangorn
+(Schliep 2010). Phylogenetic trees for bacteria and fungi were plotted
+using ape (Paradis \emph{et al.} 2004). This permitted to identify if
+similar candidate ASVs were found under different experimental
+conditions (soil/root, pepper/tomato), thus reinforcing their role in
+productivity increase, and decreasing the change that these are false
+positive.\\
+\hspace*{0.333em}\\
+{[}A partition of the variation was also performed to assess how much of
 the variation was explained by the soil and the vegetation
-characteristics. ~
+characteristics. I didn't include this in the end\ldots{}{]} ~
 
 \newpage  
 
 \section{RESULTS}\label{results}
 
-\emph{productivity} We tested the effect of the fertilization treatment
-on six productivity measures (fruit number, average fruit weight, shoots
-fresh weight, roots fresh weight) for both tomato and peppers. Visually,
-it appeared like there is a strongs correlation between fertilization
-and growth (Figure 2).\\
-\hspace*{0.333em}\\
-\includegraphics[width=5.20833in]{Figure_2_photos_productivity.png}\\
+\emph{productivity}\\
+We tested the effect of the fertilization treatment on six different
+measures of overall plant growth and productivity (fruit number, average
+fruit weight, shoots fresh weight, roots fresh weight) for both tomato
+and peppers. Fertilized plants grew better and this is apparent both
+visually (Figure 2) and statistically (Figure 3). ~\\
+\includegraphics[width=5.20833in]{../figures/productivity/Figure_2_photos_productivity.png}\\
 \textbf{Figure 2: photos of plant productivity. From top left to bottom
 right, fertilized pepper plants, pepper roots, pepper fruits and tomato
 fruits and pictures to the left of the control plants.}\\
 \hspace*{0.333em}\\
-Statistically, all six productivity measures significantly differed
-according to species (Figure 3), and five of those were significantly
-different according to the fertilization treatment. The only exception
-was the average fruit weight which did not differ between fertilized and
-control plants (LMM, F = 1.27, \emph{p}-value=0.26). However the model
-did reveal a significant interaction between treatment and plant
-(F(1,69) = 9.6,\emph{p}-value=0.0028), such that when testing only the
-pepper plants, the effect of fertilization on average fruit weight was
-significantly higher in the fertilized pepper plants (F(1,23) = 10.84,
-\emph{p}-value=0.0032).\\
+In fact, all six productivity measures significantly differed according
+to species, and five of those were significantly different according to
+the fertilization treatment. The only exception was the average fruit
+weight which did not differ between fertilized and control plants (LMM,
+\(F_{(1,69)}\) = 1.27, \emph{p}-value=0.26). However the model did
+reveal a significant interaction between treatment and plant
+(\(F_{(1,69)}\) = 9.6, \emph{p}-value=0.0028), such that when testing
+only the pepper plants, the effect of fertilization on average fruit
+weight was significantly higher in the fertilized pepper plants
+(\(F_{(1,23)}\) = 10.84, \emph{p}-value=0.0032).\\
 \hspace*{0.333em}\\
-\includegraphics[width=5.20833in]{Figure_3_productivity.pdf}\\
+\includegraphics[width=6.25000in]{../figures/productivity/Figure_3_productivity.pdf}\\
 \textbf{Figure 3: measures of plant productivity.}\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
-\emph{Sequencing} A total of 2.7 million paired-end raw reads were
-obtained for all samples combined (976,000 for soil fungi, 920 for root
-fungi, 309 for soil bacteria and 535 for root bacteria, Table 2). On
-average, 46,965 paired-end reads were obtained per sample, and after
-quality filtered were applied, including removing chimeras and
-paired-end reads were merged, an average of 18,435 sequences remained.
-While we had sequenced 192 soil samples for fungi and bacteria, and 92
-root samples for fungi and bacteria, we removed three soil fungi
-samples, 13 root fungi samples and two root bacterial samples because
-they had to few reads.\\
+\emph{Sequencing}\\
+A total of 2.7 million paired-end raw reads were obtained for all
+samples combined (976,000 for fungi-soil, 920,000 for fungi-root,
+309,000 for bacteria-soil and 535,000 for bacteria-root, Table 2). Note
+that sequencing samples were analysed separately for fungal-soil,
+fungal-root, bacteria-soil and bacteria-root conditions. On average,
+46,965 paired-end reads were obtained per sample, and after quality
+filters were applied, including removing chimeras and paired-end reads
+were merged, an average of 18,435 sequences remained. While 192 soil
+samples for fungi and bacteria, and 92 root samples for fungi and
+bacteria were sequenced, three fungi-soil samples, 13 fungi-root samples
+and two bacteria-root samples were removed because they had to few
+reads.\\
 \hspace*{0.333em}\\
 On average, 112 Amplicon Sequence Variants were identified per sample
-(average of 163 fungal ASV in the soil, 112 bacterial ASV in the soil,
-49 fungal ASV in roots, 122 bacterial ASV in roots). Many of those were
-unique to one of a few samples (total number of 6178 fungal ASV in the
-soil, 10120 bacterial ASV in the soil, 930 fungal ASV in roots, 3143
-bacterial ASV in roots). In fact, once we removed ASVs that were found
-in fewer than 10\% of the samples, we retained 418, 206, 169 and 250 ASV
-and which comprised 91\%,50\%,88\% and 85\% of all reads in the fungal
-soil, bacterial soil, fungal roots and bacterial roots samples,
-respectively.\\
+(average of 163 fungal-soil ASV, 49 fungal-root ASVs, 112 bacterial-soil
+ASVs and 122 bacterial-root ASVs). Many of those were unique to one of a
+few samples (total number of 6,178 fungal-soil, 930 fungal-root, 10,120
+bacterial-soil and 3,143 bacterial-roots ASVs). In fact, after quality
+filtering ASVs that were found in fewer than 10\% of the samples, we
+retained 418, 169, 206 and 250 ASVs and which comprised 91\%, 88\%, 50\%
+and 85\% of all reads in the fungal soil, fungal roots, bacterial soil
+and bacterial roots samples, respectively.\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}
 
 \begin{longtable}[]{@{}lrrrr@{}}
 \caption{Sequencing and ASV summary}\tabularnewline
 \toprule
-& fungi\_soil & bacteria\_soil & fungi\_root &
+& fungi\_soil & fungi\_root & bacteria\_soil &
 bacteria\_root\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-& fungi\_soil & bacteria\_soil & fungi\_root &
+& fungi\_soil & fungi\_root & bacteria\_soil &
 bacteria\_root\tabularnewline
 \midrule
 \endhead
-Nb\_samples & 192 & 192 & 96 & 96\tabularnewline
-Nb\_samples\_trimmed & 189 & 192 & 83 & 94\tabularnewline
-Nb\_seq\_sumX10e3 & 976 & 920 & 309 & 535\tabularnewline
-Nb\_seq\_mean & 51381 & 47907 & 32208 & 56365\tabularnewline
-Nb\_seq\_mean\_filtered & 38045 & 38287 & 14635 & 46081\tabularnewline
-Nb\_seq\_mean\_filt\_merged & 32014 & 13780 & 13335 &
+Nb\_samples & 192 & 96 & 192 & 96\tabularnewline
+Nb\_samples\_trimmed & 189 & 83 & 192 & 94\tabularnewline
+Nb\_seq\_sumX10e3 & 976 & 309 & 920 & 535\tabularnewline
+Nb\_seq\_mean & 51381 & 32208 & 47907 & 56365\tabularnewline
+Nb\_seq\_mean\_filtered & 38045 & 14635 & 38287 & 46081\tabularnewline
+Nb\_seq\_mean\_filt\_merged & 32014 & 13335 & 13780 &
 41058\tabularnewline
-Nb\_seq\_mean\_filt\_merg\_non\_chimeras & 24737 & 12049 & 8505 &
+Nb\_seq\_mean\_filt\_merg\_non\_chimeras & 24737 & 8505 & 12049 &
 28451\tabularnewline
-ASV\_persample & 163 & 112 & 49 & 122\tabularnewline
-ASV\_sum & 6178 & 10120 & 930 & 3143\tabularnewline
-ASV\_sum\_trimmed & 418 & 206 & 169 & 250\tabularnewline
+ASV\_persample & 163 & 49 & 112 & 122\tabularnewline
+ASV\_sum & 6178 & 930 & 10120 & 3143\tabularnewline
+ASV\_sum\_trimmed & 418 & 169 & 206 & 250\tabularnewline
 \bottomrule
 \end{longtable}
 
 ~\\
 \hspace*{0.333em}\\
 \emph{Root \& soil microbial and bacterial diversity}\\
-We then looked at the whole community structure and report the relative
-abundance of taxa (family) for the root-bacteria, soil-bacteria,
-roots-fungi \& soil-fungi conditions (Figure 4). In roots and under all
-conditions, bacterial communities were largely dominated by
-Oxyphotobacteria (class) which could not be identified at the family
-level, while Bacilaceae dominated to a lesser extent the soil
-communities. Witht respect to fungi, Nectriaceae dominated both the root
-and soil samples.
-
-~\\
-\includegraphics[width=7.29167in]{Figure4_barplots.pdf}\\
-\textbf{Figure 4: Barplots.}
-
-\emph{alpha diversity}\\
-We then looked at alpha diversity\\
+We then analysed the whole community structure and report the relative
+abundance of taxa (family) for the fungal-soil, fungal-root,
+bacteria-soil and bacteria-root conditions (Figure 4). Fungal
+communities were dominated but Nectriaceae, both the root and soil
+samples. Bacterial root communities were largely dominated by the class
+Oxyphotobacteria, but which could not be identified at the family level,
+while Bacilaceae dominated to a lesser extent the soil communities.\\
 \hspace*{0.333em}\\
-\includegraphics[width=7.29167in]{Figure5_alpha.pdf}\\
-\textbf{Figure 5: Barplots.}
-
-\emph{permanova}\\
-Communitied differed among species and treatment\\
-Lorem Ipsum\ldots{}
+\includegraphics[width=7.29167in]{../figures/Figure4_barplots.pdf}\\
+\textbf{Figure 4: Barplots.}\\
+\hspace*{0.333em}\\
+\hspace*{0.333em}\\
+\emph{Local (\(a\)-diversity)}\\
+The diversity of each site (\(a\)-diversity) was calculated for each
+sample for each of the conditions (fungi-soil, fungi-root, bacteria-soil
+and bacteria-root) and linear mixed effects models used to assess
+significance (see Figure 5). In soils samples, fungal diversity differed
+with respect to the fertilization (\(F_{(1,161)}\)=14.35,
+\emph{p}-value\textless{}0.0001) and planting (\(F_{(1,161)}\)=41.00,
+\emph{p}-value\textless{}0.0001) treatment, but not the species
+(\(F_{(1,161)}\)=0.13, \emph{p}-value=0.72). In root samples, fungal
+diversity differed with respect to the fertilization treatment
+(\(F_{(1,56)}\)=13.56, \emph{p}-value=0.001), and the species
+(\(F_{(1,56)}\)=74.31, \emph{p}-value=0.003). In soil samples, bacterial
+diversity differed with respect to the fertilization treatment
+(\(F_{(1,165)}\)=46.25, \emph{p}-value\textless{}0.0001), planting
+(\(F_{(1,165)}\)=48.77, \emph{p}-value\textless{}0.0001) and species
+(\(F_{(1,165)}\)=10.22, \emph{p}-value=0.002). In root samples,
+bacterial diversity differed with respect to the fertilization treatment
+(\(F_{(1,67)}\)=16.48, \emph{p}-value=0.0001), and the species
+(\(F_{(1,67)}\)=523.42, \emph{p}-value\textless{}0.0001). ~\\
+\includegraphics[width=6.25000in]{../figures/Figure5_alpha.pdf}\\
+\textbf{Figure 5: Barplots.}\\
+\hspace*{0.333em}\\
+\hspace*{0.333em}\\
+\emph{Differences in species composition among sites}\\
+Using a PERMANOVA statistical framework, we identified that for all
+conditions, communities differed with respect to the fertilization
+treatment (Table 2). Soil fungal and bacterial communities differed the
+most according to whether the tray was planted, while root communities
+differed the most between tomato and pepper plants.\\
+\hspace*{0.333em}
 
 \begin{longtable}[]{@{}lllll@{}}
-\caption{PERMANOVAs (R\^{}2 and \emph{p}-values)}\tabularnewline
+\caption{summary of PERMANOVAs*}\tabularnewline
 \toprule
-& soil\_fungi & root.fungi & soil\_bact & root\_bact\tabularnewline
+& fungi\_soil & fungi\_root & bacteria\_soil &
+bacteria-root\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-& soil\_fungi & root.fungi & soil\_bact & root\_bact\tabularnewline
+& fungi\_soil & fungi\_root & bacteria\_soil &
+bacteria-root\tabularnewline
 \midrule
 \endhead
 fertilization & 0.02 (4e-04) & 0.04 (0.0013) & 0.03 (1e-04) & 0.01
@@ -517,37 +562,59 @@ NA\tabularnewline
 \bottomrule
 \end{longtable}
 
-\emph{constrained ordinations and candidate ASVs}\\
-Relationships between environmental variables and prokaryotic
-communities.Canonical redundancy analysis indicated that distribution of
-phyla in the studied soils could be significantly explained by estimated
-nitrogen deposition,
+\emph{*R\textsuperscript{2} {[}percentage of variance explained by the
+term in the model{]} and associated }p\emph{-values} ~\\
+\hspace*{0.333em}\\
+\emph{Constrained ordinations and candidate ASVs}\\
+Constrained ordinations clearly indicated how fertilized samples
+clustered together according to their fungal or bacterial communities
+(Figure 6). It also shows how three of the constrain variables
+(productivity measures of root fresh weight, shoots fresh weight and
+fruit number) were associated with the fertilization treatment, while
+average fruit weight behave differentially (in fact nearly orthogonally
+to the other three constrains in most ordinations).\\
+\hspace*{0.333em}\\
+\includegraphics{../figures/Figure6_rda.pdf}\\
+\textbf{Figure 6: rda.}\\
+\hspace*{0.333em}\\
+\hspace*{0.333em}\\
+Next, we identified, for each ordination, the ten ASVs which were most
+closely related to the three constrains which behave in a similar
+fashion (productivity measures of root fresh weight, shoots fresh weight
+and fruit number). These were considered as putative candidates which
+may be most positively impacted (increase presence of the candidate) by
+fertilization. We aligned the corresponding sequences for these eigthy
+candidates (ten candidates * eight ordinations) ASVs in two seperate
+alignments (one for fungi and one for bacterial ASVs), built distance
+matrices and plotted neighbouring joining trees. In fungi, we identified
+one cluster of ASVs taxonomically assigned to \emph{Olpidium brassicae}
+that forms the majority of ASVs most closely related to productivity. In
+addition, we identified seven closely related sequences closely related
+to productivity in all both species and both root and soil.
+Unfortunately, we could not assign taxonomy. SO WE BLASTED THESE
+SEQUENCES TO OBTAIN MORE INFO ABOUT WHAT IT IS.
 
-\includegraphics[width=4.16667in]{Figure6_rda.pdf}\\
-\textbf{Figure 6: rda.}
+In bacteria, we identified a cluster of ten closely related sequences
+taxonomically assigned to ``Chloroplast''. In fact this is most likely
+the plant extract itself!!! Then we also have marine sps in the soil
+(ASV267:Ilumatobacteraceae), which may come from the extract
+itself\ldots{}
 
-Phylogenetic trees of candidate ASVs.
-
-\includegraphics[width=4.16667in]{Figure7_bacteria_tree.pdf}\\
-\textbf{Figure 7a: trees}
-
-\includegraphics[width=4.16667in]{Figure7_fungi_tree.pdf}\\
-\textbf{Figure 7b: trees}
-
-\newpage  
-
-\section{DISCUSSION}\label{discussion}
-
-\newpage  
-
-\section{REFERENCE}\label{reference}
-
+~\\
+\hspace*{0.333em}\\
+\includegraphics{../figures/Figure7_candidateASVs.pdf}\\
+\textbf{Figure 7: Candidate trees} ~\\
+\hspace*{0.333em}\\
+\newpage   \#DISCUSSION\\
+\newpage   \#REFERENCE\\
 Anderson MJ. 2001. A new method for non-parametric multivariate analysis
 of variance. Austral Ecology 26:32-46 Caporaso, J. Gregory, Justin
 Kuczynski, Jesse Stombaugh, Kyle Bittinger, Frederic D. Bushman,
 Elizabeth K. Costello, Noah Fierer et al. ``QIIME allows analysis of
 high-throughput community sequencing data.'' Nature methods 7, no. 5
 (2010): 335. ~\\
+Craigie, J. S. 2011. Seaweed extract stimuli in plant science and
+agriculture. J. Appl. Phycol. 23: 371 393 ~\\
 silva for dada2: Silva taxonomic training data formatted for DADA2
 (Silva version 132)). 10.5281/zenodo.1172783 ~\\
 UNITE Community (2017): UNITE general FASTA release. Version 01.12.2017.
@@ -565,14 +632,18 @@ Hugerth, Luisa W., Hugo A. Wefer, Sverker Lundin, Hedvig E. Jacobsson,
 Mathilda Lindberg, Sandra Rodin, Lars Engstrand, and Anders F.
 Andersson. ``DegePrime: a program for degenerate primer design for broad
 taxonomic-range PCR for microbial ecology studies.'' Applied and
-environmental microbiology (2014): AEM-01403. ~ Paradis, E., Claude, J.,
-\& Strimmer, K. (2004). APE: analyses of phylogenetics and evolution in
-R language. Bioinformatics, 20(2), 289-290. ~ Schloss, Patrick D., Sarah
-L. Westcott, Thomas Ryabin, Justine R. Hall, Martin Hartmann, Emily B.
-Hollister, Ryan A. Lesniewski et al. ``Introducing mothur: open-source,
-platform-independent, community-supported software for describing and
-comparing microbial communities.'' Applied and environmental
-microbiology 75, no. 23 (2009): 7537-7541. ~\\
+environmental microbiology (2014): AEM-01403. ~\\
+Jukes TH and Cantor CR (1969). Evolution of Protein Molecules. New York:
+Academic Press. 21--132.\\
+\hspace*{0.333em}\\
+Paradis, E., Claude, J., \& Strimmer, K. (2004). APE: analyses of
+phylogenetics and evolution in R language. Bioinformatics, 20(2),
+289-290. ~ Schloss, Patrick D., Sarah L. Westcott, Thomas Ryabin,
+Justine R. Hall, Martin Hartmann, Emily B. Hollister, Ryan A. Lesniewski
+et al. ``Introducing mothur: open-source, platform-independent,
+community-supported software for describing and comparing microbial
+communities.'' Applied and environmental microbiology 75, no. 23 (2009):
+7537-7541. ~\\
 Schliep, K. P. (2010). phangorn: phylogenetic analysis in R.
 Bioinformatics, 27(4), 592-593. ~\\
 Toju, H., Tanabe, A. S., Yamamoto, S., \& Sato, H. (2012). High-coverage
@@ -581,7 +652,9 @@ basidiomycetes in environmental samples. PloS one, 7(7), e40863. ~\\
 Wickham, H., Francois, R., Henry, L., \& Müller, K. (2015). dplyr: A
 grammar of data manipulation. R package version 0.4, 3. ~\\
 Wickham, Hadley. ggplot2: elegant graphics for data analysis. Springer,
-2016.
+2016. ~\\
+Wright ES (2016). ``Using DECIPHER v2.0 to Analyze Big Biological
+Sequence Data in R.'' The R Journal, 8(1), 352-359.
 
 
 
